basic designs for post done

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -15,7 +15,10 @@
     border-radius: 50%;
     object-fit: cover;
 }
+.searchIcon_input {
+    padding: 10px;
 
+}
 .topIcon {
     font-size: 20px;
     margin-right: 10px;
@@ -31,7 +34,8 @@
 }
 
 .topCenter {
-    flex: 6;
+    flex: 3;
+    padding: 10px;
 }
 
 .topList {
