--- a/src/components/singlepost/singlepost.css
+++ b/src/components/singlepost/singlepost.css
@@ -1,21 +1,24 @@
 .singlePost{
     flex: 9;
 }
-​
+
 .singlePostWrapper{
     padding: 20px;
     padding-right:0;
 }
-​
-singlePostImg{
-    width: 100%;
-    height:300px;
-    border-radius: 5px;
-    object-fit: cover;
+
+.singlePostImg{
+   height: 400px;
+border-radius: 5px;
+  
 }
-​
 .singlePostTitle{
-    text-align: center;
+ 
     margin: 10px;
-    font-size: 12px;
+    font-size: 30px;
 } 
+.singlePostIcon{
+  float: right;
+  font-size: 20px;
+  padding: 10px;
+}
