--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,7 +2,7 @@
     flex:3;
     margin:20px;
     padding-bottom: 30px;
-    background-color: #342B38;
+    background-color: #d4ccd8;
     border-radius:10px;
     display: flex;
     flex-direction: column;
