--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,7 +7,8 @@
     flex-direction: column;
     align-items: center;
     font-family: 'Jost', sans-serif;
-    color: #FF9595;
+    color: black;
+    background-color: rgb(203, 210, 208);
 }
 
 .headerTitleSm{
