--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,59 +1,59 @@
 .topBar {
-    height: 100px;
-    width:100%;
-    background-color: #ffff;
-    position: sticky;
-    top:0;
-    display: flex;
-    align-items: center;
-    font-family: 'Jost', sans-serif;
+  height: 100px;
+  width: 100%;
+  background-color: #ffff;
+  position: sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  font-family: "Jost", sans-serif;
 }
 
 .topImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 .searchIcon_input {
-    padding: 10px;
-
+  padding: 10px;
 }
 .topIcon {
-    font-size: 20px;
-    margin-right: 10px;
-    color: #c3bbc6;
-    cursor: pointer;
+  font-size: 20px;
+  margin-right: 10px;
+  color: #c3bbc6;
+  cursor: pointer;
 }
 
-.topLeft, .topRight {
-    flex: 3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.topLeft,
+.topRight {
+  flex: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .topCenter {
-    flex: 3;
-    padding: 10px;
+  flex: 3;
+  padding: 10px;
 }
 
 .topList {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .topListItem {
-    margin-right:20px;
-    font-size: 18px;
-    font-weight: 300;
-    cursor: pointer;
+  margin-right: 20px;
+  font-size: 18px;
+  font-weight: 300;
+  cursor: pointer;
 }
 
-.logout{
-    width: 100px;
-    margin: 20px;
+.logout {
+  width: 100px;
+  margin: 20px;
 }
