--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,7 +1,26 @@
 .post{
     width: 385px;
-    margin: 0px 25px 40px 25px;
+    margin:   10px 25px 25px 10px;
+    background-color: white;
+    padding:20px;
+    border-radius: 5px;
 }
+
+.postHeader{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: -20px;
+}
+
+.postTitle{
+    font-size: 38pt;
+    color: black;
+    text-align: center;
+    margin-bottom: -15px;
+    font-family: 'Permanent Marker', cursive;
+}
+
 .postImg{
     width:100%;
     height: 280px;
@@ -11,14 +30,17 @@
 .postInfo{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: flex-end;
 }
 .postDetails{
-    color:blue;
+display: flex;
+flex-direction:row;
+color:#FF8080;
 }
+
 .postDate{
     font-style: italic;
-    font-size: 12px;
+    font-size: 12pt;
 }
 .postDesc{
     overflow: hidden;
@@ -28,5 +50,5 @@
     -webkit-box-orient: vertical;
 }
 .hash{
-    color: blue;
+    color: black;
 }
