--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -1,7 +1,7 @@
 body{
-  background-image: url(https://images.unsplash.com/photo-1534531688091-a458257992cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+/*   background-image: url(https://images.unsplash.com/photo-1534531688091-a458257992cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
   background-size: cover;
-  background-position: center;
+  background-position: center; */
   font-family: 'Jost', sans-seri;
   margin: 30px;
 }
