--- a/src/components/singlepost/singlepost.css
+++ b/src/components/singlepost/singlepost.css
@@ -1,24 +1,88 @@
 .singlePost{
     flex: 9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .singlePostWrapper{
-    padding: 20px;
-    padding-right:0;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .singlePostImg{
-   height: 400px;
-border-radius: 5px;
-  
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+    max-height: 500px;
+    border-radius: 5px;
 }
 .singlePostTitle{
- 
+    font-family: 'Permanent Marker', cursive;
     margin: 10px;
-    font-size: 30px;
+    font-size: 30pt;
 } 
-.singlePostIcon{
-  float: right;
-  font-size: 20px;
-  padding: 10px;
+
+.singlepostAuthor{
+    font-weight: 300;
+    font-size: 12pt;
 }
+
+.singlePostDesc{
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 12pt;
+}
+
+.singlePostEdit{
+    display: flex;
+    margin: 5px;
+}
+
+.singlePostIcon{
+    float: right;
+    font-size: 22px;
+    padding: 5px;
+    color: #FF8080;
+  }
+
+
+
+  @media screen and (min-width: 600px) and (max-width: 1000px) {
+    .singlePostTitle{
+        font-size: 40pt;
+    } 
+    .singlepostAuthor{
+        font-size: 18pt;
+    }
+    .singlePostDesc{
+        font-size: 16pt;
+    }
+    .singlePostIcon{
+        font-size: 32px;
+      }
+}
+
+@media screen and (min-width: 1000px){
+    .singlePostTitle{
+        font-size: 45pt;
+    } 
+    .singlepostAuthor{
+        font-size: 20pt;
+    }
+    .singlePostDesc{
+        font-size: 18pt;
+    }
+    .singlePostWrapper{
+        flex-direction: row;
+        justify-content: left;
+    }
+    .singleRow{
+        margin-left: 25px;
+        margin-right: 20px;
+        margin-top: -30px;
+    }
+}
+
