--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,30 +1,29 @@
 .sidebar {
-    flex:3;
-    margin:20px;
+    flex:9;
     padding-bottom: 30px;
-
-    border-radius:10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    background-color:#FF8080;
+
+
 }
 
 .sidebarItem {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
 }
 
 .sidebarTitle{
     margin: 10px;
     padding: 5px;
-    width: 80%;
-    border-top: 1px solid #FF9595;
+    border-top: 1px solid #C6F1D6;
+    color:#C6F1D6;
     font-family: 'Jost', sans-serif;
     font-size: 18px;
-    color:#FF9595;
+
     line-height: 20px;
-    text-align: center;
+    text-align: left;
 }
 
 .sidebarItem > img{
