--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,13 +1,34 @@
-.topBar {
-  height: 100px;
-  width: 100%;
-  background-color:#FFBA92;
-  color:#C6F1D6;
+ .topBar{
+   display: flex;
+   flex-direction: row;
+   width: 100%;
+   height: 80px;
+   background-color:#FFBA92;
+   color:#C6F1D6;
+   font-family: "Jost", sans-serif;
   position: sticky;
   top: 0;
+ }
+
+ .topCenter {
+  flex: 3;
+  padding: 10px;
+}
+
+.topList {
   display: flex;
-  align-items: center;
-  font-family: "Jost", sans-serif;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+ 
+.topListItem {
+  margin-right: 20px;
+  font-size: 12pt;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 .topImg {
@@ -16,45 +37,130 @@
   border-radius: 50%;
   object-fit: cover;
 }
-.searchIcon_input {
-  padding: 10px;
-}
-.topIcon {
-  font-size: 20px;
 
-  color: #c3bbc6;
-  cursor: pointer;
+.profileName{
+  font-size: 12pt;
+  font-weight: 300;
+  margin-left: 10px;
+  margin-top: 9px;
 }
 
-.topLeft,
+
 .topRight {
-  flex: 3;
+  flex: 3 1;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-top: 5px;
 }
 
-.topCenter {
-  flex: 3;
-  padding: 10px;
-}
-
-.topList {
+.userInfo{
   display: flex;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.topListItem {
-  margin-right: 20px;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
+  align-items: center;
+  flex-direction: column;
 }
 
 .logout {
   width: 100px;
   margin: 20px;
 }
+
+
+
+
+.menu-btn{
+  position: relative;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width:80px;
+  height:80px;
+  cursor: pointer;
+  transition: all .5s ease-in-out;
+  border: 3 px solid red;
+}
+
+.logout{
+  font-family: 'Jost', sans-seri;
+  font-size: 10pt;
+  font-weight: 600;
+  align-items: center;
+  appearance: none;
+  background-color: #FF8080;
+  border-radius: 20px;
+  border-style: none;
+  border-color: #F6D186;
+  box-sizing: border-box;
+  color: #342B38;
+  cursor: pointer;
+  display: inline-flex;
+  height: 30px;
+  justify-content: center;
+  letter-spacing: 2.4px;
+  width: 50%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform,opacity;
+  z-index: 0;
+
+}
+
+
+
+
+/* 
+.menu-btn_burger{
+  width:50px;
+  height:6px;
+  background:blue;
+  border-radius:5px;
+  box-shadow: 0 2px 5px pink;
+  transition: all .5s ease-in-out; 
+}
+
+.menu-btn_burger::before,
+.menu-btn_burger::after{
+content: ' ';
+position:absolute;
+width:50px;
+  height:6px;
+  background:blue;
+  border-radius:5px;
+  box-shadow: 0 2px 5px pink;
+  transition: all .5s ease-in-out; 
+}
+/* 
+.menu-btn_burger::before{
+  transform: translateY(-16px);  
+}
+
+.menu-btn_burger::after{
+  transform: translateY(16px);  
+}
+ */
+
+
+
+/* 
+
+
+
+
+
+
+
+
+
+
+ */
+
+ 
