--- a/src/pages/write/write.css
+++ b/src/pages/write/write.css
@@ -1,3 +1,16 @@
 .write{
-    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #C6F1D6;
+    width: 90%;
+    max-width: 600px;
+    margin: 10px;
+    padding: 15px;
+    border-radius:5px
+}
+
+.writeText{
+    width:280px;
+    height:150px;
 }
