--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,6 +1,12 @@
+.top{
+    width:100%;
+}
+
+
+
 .home{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-  
+
+    align-items: center;
 }
