--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,5 +1,5 @@
 .post{
-    width: 385px;
+    max-width: 360px;
     margin:   10px 25px 25px 10px;
     background-color: white;
     padding:20px;
