--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -1,7 +1,8 @@
 .posts{
-   flex:9;
-   display:flex;
+   flex: 9 1;
+   display: flex;
    flex-wrap: wrap;
+   margin-left: 10px;
    justify-content: center;
    width: fit-content;
 }
