--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -1,4 +1,8 @@
-
+.Register{
+  background-image: url(https://images.unsplash.com/photo-1534531688091-a458257992cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+background-position: center;
+background-size: cover;
+}
 
 .titleBox{
   display:flex;
@@ -13,9 +17,10 @@
 
 .RegisterTitle{
   font-size: 54pt;
-  color: #C6F1D6;
+  color: #F4E06D;
   margin-bottom: -40px;
   margin-top: -20px;
+  padding: 10px;
 }
 .invalid{
 color:red
@@ -24,14 +29,14 @@ color:red
 color:green
 }
 .registerBox{ 
-  background-color: #C6F1D6;
+  background-color: #FFFFDE;
   opacity: 0.85;
   margin-top: 16px;
   padding: 20px;
   min-width: 280px;
   max-width: 60%;
+  height: 500px;
   border-top-right-radius: 60px;
-  border-bottom-left-radius: 20px;
 }
 
 .RegisterForm{
@@ -42,43 +47,19 @@ color:green
 .buttonBox{
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-top: 12px;
   text-align: center;
   width: 240px;
+  position: relative;
 }
 
-  .registerButton, .registerLoginButton {
-    font-family: 'Jost', sans-seri;
-    font-size: 18px;
-    font-weight: 600;
-    align-items: center;
-    appearance: none;
-    background-color: #FF8080;
-    border-radius: 20px;
-    border-style: none;
-    border-color: #F6D186;
-    box-sizing: border-box;
-    color: #342B38;
-    cursor: pointer;
-    display: inline-flex;
-    height: 40px;
-    justify-content: center;
-    letter-spacing: 2.4px;
-    width: 50%;
-    overflow: visible;
-    padding: 2px 24px;
-    position: relative;
-    text-align: center;
-    text-transform: none;
-    transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: auto;
-    will-change: transform,opacity;
-    z-index: 0;
-  }
-
+.errorMessage{
+  background-color: tomato;
+}
+  
+.registerLoginButton{
+  background-color: #C499BA;
+}
 
   .registerButton:hover {
     background: #FFBA92;
@@ -101,29 +82,20 @@ color:green
     color: #FF8080;
   }
 
-  .registerInput{
-    border: none;
-  background-color: transparent;
-  color: #F19292;
-  font-family: 'Jost', sans-seri;
-  font-size: 16pt;
-  height: 30px;
-  width: 250px;
-  padding: 2px;
+  .registerLabel{
+    color:#8a3d50;
+    font-style: italic;
+    font-weight: 700;
+    font-size: 14pt;
   }
+  
 
-  .registerInput::placeholder{
-    color:#342B38;
-  }
-
-  .errorMessage{
+  .message{
     font-size: 10pt;
-    padding:-2px;
+    padding:-10px;
+    background-color: yellow;
   }
 
-span{
-padding:10px;
-}
 
   /*Media queries*/
 
