--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,27 +1,54 @@
 
 
-.Register{
+.login{
+    background-image: url(https://images.unsplash.com/photo-1534531688091-a458257992cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    background-position: center;
+    background-size: cover;
     display: flex;
     flex-direction: column;
 }
 
 .loginTitle{
-    font-size: 94pt;
-   color: white;
-    margin-bottom: -20px;
+    font-size: 54pt;
+    color: #F4E06D;
+    margin-bottom: -40px;
+    margin-top: -20px;
+    padding: 10px;
 }
 
 .loginBox{ 
-    background-color: rgba(255, 255, 255, 0.5);
-    padding: 30px;
-    margin-top: 50px;
-    border-radius: 10px;
-    font-size: 18pt;
+    background-color: #FFFFDE;
+    opacity: 0.85;
+    margin-top: 16px;
+    padding: 20px;
+    min-width: 280px;
+    max-width: 60%;
+    height: 500px;
+    border-top-right-radius: 60px;
 }
 
 .loginForm{
     display: flex;
     flex-direction: column;
-justify-content: flex-end;
-padding: 10px;
 }
+
+.buttonBox2{
+    display: flex;
+    flex-direction: column;
+    margin-top: 140px;
+    text-align: center;
+    width: 240px;
+    position: relative;
+  }
+
+  .loginRegisterButton{
+    background-color: #C499BA;
+  }
+  
+    .loginButton:hover {
+      background: #FFBA92;
+    }
+  
+    .loginRegisterButton:hover {
+      background: #FFBA92;
+    }
