--- a/src/pages/single/single.css
+++ b/src/pages/single/single.css
@@ -1,6 +1,6 @@
 .single{
     display: flex;
-    background-color: white;
+    background-color: #C499BA;
     flex-direction: column;
     color: #342929;
     border-radius: 5px;
