--- a/src/pages/write/write.css
+++ b/src/pages/write/write.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #C6F1D6;
+    background: #FFFFDE;
     width: 85%;
     max-width: 600px;
     margin: 15px;
