--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -1,5 +1,5 @@
 .Register{
-  background-image: url(https://images.unsplash.com/photo-1534531688091-a458257992cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+ background-image: url(https://images.unsplash.com/photo-1534531688091-a458257992cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
 background-position: center;
 background-size: cover;
 display: flex;
@@ -10,7 +10,6 @@ flex-direction: column;
   display:flex;
   flex-direction: column;
 }
-
 
 .RegisterTitle{
   font-size: 54pt;
@@ -26,7 +25,7 @@ color:red
 color:green
 }
 .registerBox{ 
-  background-color: rgb(244, 224, 109, 0.7);
+  background-color: rgb(255, 255, 222, 0.8);
   opacity: 0.85;
   margin-top: 16px;
   padding: 20px;
@@ -38,22 +37,34 @@ color:green
 
 .RegisterForm{
   display: flex;
-  flex-direction: column;
+    flex-direction: column;
+    margin-top: -10px;
+}
+
+.fa-eye-slash, .fa-eye {
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+  color: #FF7396;
+  margin-left: 10px;
+  margin-top: -10px;
+}
+
+.registerLabel{
+  font-size: 14pt;
+  font-weight:900;
+  color:#F4E06D;
 }
 
 .buttonBox{
   display: flex;
-  flex-direction: column;
-  margin-top: 12px;
-  text-align: center;
-  width: 240px;
-  position: relative;
+    flex-direction: column;
+    margin-top: 400px;
+    margin-left: 4%;
+    text-align: center;
+    width: 240px;
+    position: absolute;
 }
 
-.errorMessage{
-  background-color: tomato;
-}
-  
 .registerLoginButton{
   background-color: #C499BA;
 }
@@ -80,16 +91,15 @@ color:green
   }
 
   .registerLabel{
-    color:#8a3d50;
-    font-style: italic;
-    font-weight: 700;
     font-size: 14pt;
+    font-weight:900;
+    color:#FF7396;
   }
   
-
   .message{
     font-size: 10pt;
     padding:-10px;
+    margin-left:15px;
   }
 
 
@@ -167,63 +177,4 @@ color:green
   margin-top:15px;
   margin-bottom:5px;
 }
-.fa-eye-slash, .fa-eye {
-  font-family: "Font Awesome 6 Free";
-  font-weight: 900;
-  color: #FF7396;
-  margin-left: 10px;
-}
-
-
-
   }
-
-    /* .Register {
-      flex-direction: row;
-      justify-content: right;
-      align-items: baseline;
-      width: 100%;
-      height: 700px;
-
-      .Register {
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: end;
-        width: 100%;
-        height: 100%;
-    }
-
-
-  }
-  
-  .titleBox{
-    flex-direction: column;
-  }
-
-    .RegisterTitle{
-      font-size: 110pt;
-          background: none;
-    width: 300px;
-    margin-left: 85px;
-    margin-top: 1px;
-    }
-    .registerBox {
-    
-      width: 500px;
-      height: 800px;
-    
-  }
-
-.registerInput {
-  color: #F19292;
-  font-size: 24pt;
-  height: 30px;
-  width:fit-content;
-}
-.registerInput::placeholder{
-  font-size: 34pt;
-  font-weight:700;
-  color:#F4E06D;
-}
- 
-  } */
