--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,4 +1,5 @@
 .post{
+
     max-width: 360px;
     margin: 10px 25px 25px 10px;
     background-color: white;
@@ -10,17 +11,18 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-top: -20px;
+    margin-top: -7px;
 }
 
 .postTitle{
-    font-size: 32pt;
+    font-size: 30pt;
+    line-height: 40px;
     color: black;
     text-align: center;
     margin-bottom: -5px;
     font-family: 'Permanent Marker', cursive;
     text-overflow: ellipsis;
-    display:-webkit-box;
+    display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
 }
@@ -48,6 +50,8 @@
 .postDate{
     font-style: italic;
     font-size: 12pt;
+    margin-top: 15px;
+    margin-bottom: -15px;
 }
 .postDesc{
     overflow: hidden;
