--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -5,6 +5,8 @@
     background-color: white;
     padding: 15px;
     border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+    
 }
 
 .postHeader{
@@ -28,10 +30,11 @@
 }
 
 .postImg{
-    width:100%;
+width:300px;
     height: 280px;
     object-fit: cover;
     border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
 }
 .postInfo{
     display: flex;
@@ -54,6 +57,7 @@
     margin-bottom: -15px;
 }
 .postDesc{
+    width: 300px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -93,3 +97,12 @@ color: #FF7396;
     background: transparent;
 }
 
+@media screen and (min-width: 1200px)  {
+    .postImg{
+        width:350px;
+        }
+        .postDesc{
+            width: 350px;
+        
+        }
+}
