--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -60,11 +60,13 @@
   border-radius: 50%;
   object-fit: cover;
 }
-
-
+.link{
+  text-decoration: none;
+}
 .profileName{
-  font-size: 12pt;
-  font-weight: 300;
+ 
+  font-size: 15pt;
+  font-weight: 500;
   margin-left: 10px;
   margin-top: 9px;
 }
@@ -72,7 +74,7 @@
 .userInfo{
   display: flex;
   align-items: center;
-  flex-direction: column;
+
 }
 
 
